{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Menu",
            "id": "4e8836e5-288d-4022-aba0-f73dc17279e4",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "74eac57e-6860-4f73-b38e-ba1eb53c26a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavigateUp",
                    "type": "PassThrough",
                    "id": "e58765f3-8bd4-4ec5-8539-f9e8e1838ec7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "35d1cc18-fba5-4f88-b653-efa8aa53cc25",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dee75066-c042-448c-9160-403971f75936",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavigateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dfaa089-2eb1-42fd-aafe-a2f99e0b3048",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavigateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}